--- a/_config.yml
+++ b/_config.yml
@@ -82,9 +82,9 @@ analytics:
 author:
   name             : "Ejiro Umaka"
   avatar           : "profile.png"
-  bio              : "Research Associate in heavy-ion physics"
+  bio              : "Research Associate and Data Analyst"
   location         : ""
-  employer         : "Brookhaven National Laboratory"
+  employer         : "Brookhaven National Lab"
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?user=r_2WiDUAAAAJ&hl=en"
   email            : ejinaomiumaka@gmail.com
