--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ author:
   name             : "Ejiro Umaka"
   avatar           : "profile.png"
   bio              : "Research Associate and Data Analyst"
-  location         : ""
+  location         : "Brookhaven, NY"
   employer         : "Brookhaven National Lab"
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?user=r_2WiDUAAAAJ&hl=en"
