--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Ejiro Umaka"
   avatar           : "profile.png"
-  bio              : "Research Associate and Data Analyst"
+  bio              : "Research Associate & Data Analyst"
   location         : "Brookhaven, NY"
   employer         : "Brookhaven National Lab"
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
